# mask_produce

./: CMakeLists.txt  README.md  main.cpp
include/: mask_bounding.h  mask_generation.h
src/: main.cpp  mask_bounding.cpp  mask_generation.cpp
